LO1 SHOULD BE DONE NOW - register, login, and auth_tokens set

--- a/Project 2/templates/index.html
+++ b/Project 2/templates/index.html
@@ -1,8 +1,8 @@
 <!--Literally copy + paste from HW 2 index.html-->
 <html>
     <head>
-        <title>CSE312 Homework App</title>
-        <link rel="stylesheet" type="text/css" href="{{url_for('pathRoute', file='design/style.css')}}"/>
+        <title>CSE312 Homework App CINNA</title>
+        <link rel="stylesheet" type="text/css" href="{{url_for('pathRoute', file='static/design/style.css')}}"/>
         
         <!--CITE: https://youtu.be/q9YVDrKvzxY-->
         <link rel="icon" type="image/png" href="{{url_for('pathRoute', file='static/image/cinna.png')}}">
