guys this is so cute - INPUT BOXES ARE ROUND

--- a/Project 2/templates/index.html
+++ b/Project 2/templates/index.html
@@ -10,9 +10,9 @@
         <!--STYLING STUFF -- CITE: https://www.w3docs.com/snippets/css/how-to-style-input-and-submit-buttons.html-->
         <style>
             input[type=submit] {
-                padding: 0.4vmax 1vmax;
+                padding: 0.2vmax 0.4vmax;
                 background-color: #ffa9e1;
-                border: 0.4vmax solid #fff;
+                border: 0.2vmax solid #fff;
                 outline: none;
                 border-radius: 25px;
                 box-shadow: 0 0 1vmax #ffa9e1 ;
@@ -20,6 +20,16 @@
                 color: rgb(167, 26, 136);
                 letter-spacing: 0.4px;
                 cursor: pointer;
+            }
+            input[type=text] {
+                padding: 0.4vmax;
+                border: 0.2vmax solid #ffa9e1;
+                border-radius: 25px;
+            }
+            input[type=password] {
+                padding: 0.4vmax;
+                border: 0.2vmax solid #ffa9e1;
+                border-radius: 25px;
             }
           </style>
     </head>
