Core function works

--- a/Project 2/templates/index.html
+++ b/Project 2/templates/index.html
@@ -61,7 +61,9 @@
         <div class="chat-form">
             <hr>
             <label>
-                Chat:
+                Title:
+                <input id="title-box" type="text">
+                Message:
                 <input id="chat-text-box" type="text">
                 <input id="xsrf" type="text" value="this is going to get replaced soon" hidden>
             </label>
