Added current user

--- a/Project 2/templates/index.html
+++ b/Project 2/templates/index.html
@@ -96,6 +96,7 @@
                 </label>
                 <input type="submit" style="font-family: cursive; background-color: #ffa9e1;" value="Post">
             </form>
+        <h2 class="username" id="user_display"> </h2>
 
 
         </div>
