--- a/Project-4/backend/templates/index.html
+++ b/Project-4/backend/templates/index.html
@@ -44,6 +44,37 @@
   });
 </script>
 
+<!--STEP 6: Send the authorization code to the server----------------------------------------------------------------------------->
+<!-- Last part of BODY element in file index.html -->
+<script>
+    function signInCallback(authResult) {
+      if (authResult['code']) {
+    
+        // Hide the sign-in button now that the user is authorized, for example:
+        $('#signinButton').attr('style', 'display: none');
+    
+        // Send the code to the server
+        $.ajax({
+          type: 'POST',
+          url: 'http://example.com/storeauthcode',
+          // Always include an `X-Requested-With` header in every AJAX request,
+          // to protect against CSRF attacks.
+          headers: {
+            'X-Requested-With': 'XMLHttpRequest'
+          },
+          contentType: 'application/octet-stream; charset=utf-8',
+          success: function(result) {
+            // Handle or verify the server response.
+          },
+          processData: false,
+          data: authResult['code']
+        });
+      } else {
+        // There was an error.
+      }
+    }
+</script>
+
 <!--ORIGINAL INDEX.HTML-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
