attempt 4 sign in auth code

--- a/Project-4/backend/templates/index.html
+++ b/Project-4/backend/templates/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <!--CITE: https://developers.google.com/identity/sign-in/web/server-side-flow#:~:text=To%20create%20a%20client%20ID%20and%20client%20secret%2C,Application%20type%2C%20select%20Web%20application.%20...%20More%20items-->
 <!--Try to set up Google Sign-->
 <!--STEP 2: Include the Google platform library on your page----------------------------------------------------------------------------->
 <!-- The top of file index.html -->
-<html itemscope itemtype="http://schema.org/Article">
+<html itemscope itemtype="http://schema.org/Article " lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <!-- BEGIN Pre-requisites -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
     </script>
@@ -70,12 +72,8 @@
         });
         </script>
     </body>
-</html>
-
 
 <!--ORIGINAL INDEX.HTML-->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login and Register</title>
     <style>
         body {
