--- a/Project-3/backend/templates/index.html
+++ b/Project-3/backend/templates/index.html
@@ -35,10 +35,10 @@
 <body>
 
 <!-- Directly link to the login page -->
-<a href="/login" class="btn login-btn">Login</a>
+<a href="/login" class="btn login-btn">Login Marco</a>
 
 <!-- Directly link to the register page -->
-<a href="/register" class="btn register-btn">Register</a>
+<a href="/register" class="btn register-btn">Register Marco</a>
 
 </body>
 </html>
