mainly styling changes (navbar, home page, creating auctions, dark web)

--- a/Project-4/NewRome/static/style/index.css
+++ b/Project-4/NewRome/static/style/index.css
@@ -3,6 +3,12 @@ body {
     padding: 20px;
 }
 
-body .homepage {
-    background-image: url(https://rome.us/wp-content/uploads/Ancient-Roman-Sites-and-Ruins-jpg.webp);
-}
+
+/*General Classes*/
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
