--- a/Project-4/NewRome/templates/auctions_create.html
+++ b/Project-4/NewRome/templates/auctions_create.html
@@ -4,21 +4,32 @@
     <header class="header">
       <h1>CREATE A LISTING</h1>
     </header>
+    <style>
+        body {
+          background-image: url('https://i.pinimg.com/originals/bb/34/c3/bb34c3b2adc52c0b06b173c35c6b768c.jpg');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
+        }
 
+        input {
+            border-radius: 25px; /*makes corners rounded*/
+        }
+    </style>
     <div class="gallery" id="gallery_div_create" onload="welcome_auctions_create()">
         <div class="listing">
             <form action="/listing-img" id="image-form" method="post" enctype="multipart/form-data">
                 <label for="form-file-btn">Select Image: </label>
-                <input id="form-file-btn" type="file" name="file" accept="image*/">
-                <input id="submit-img" type="submit" value="Upload Image">
+                <input id="form-file-btn" class="center" type="file" name="file" accept="image*/">
+                <input id="submit-img" class="center" type="submit" value="Upload Image">
             </form>
             <!--            Bid info form           -->
             <form action="listing-create">
-                <input type="tel" id="l-title" name="title" placeholder="Enter a title">
+                <input type="tel" id="l-title" class="center" name="title" placeholder="Enter a title">
                 <img id='img_src' src="{{ url_for('static', filename=filename) }}">
                 <textarea id="l-desc" name="description" rows="4" cols="40" placeholder="Enter description"></textarea>
-                <input type="tel" id="l-bid" name="bid" placeholder="Enter starting bid" pattern="[0-9]">
-                <input type="tel" id="l-time" name="time" placeholder="Enter start time in seconds" pattern="[0-9]">
+                <input type="tel" id="l-bid" class="center" name="bid" placeholder="Enter starting bid" pattern="[0-9]">
+                <input type="tel" id="l-time" class="center" name="time" placeholder="Enter start time in seconds" pattern="[0-9]">
                 created by <span>MeMario</span>
                 </br>
                 <button type="button" id="create-listing-btn" onclick="create_listing()"> Create Listing</button>
@@ -28,7 +39,7 @@
             <h3>Roman Shield</h3>
             <img src="/static/client_images/default.png">
             <p>Description Example: This shield is over 1000 years old. Can you believe it? </p>
-            <input type="tel" id="l-urbid" name="urbid" placeholder="Enter a bid" pattern="[0-9]">
+            <input type="tel" id="l-urbid" class="center" name="urbid" placeholder="Enter a bid" pattern="[0-9]">
             <button type="button">Place Bid</button>
             <button type="button">0</button>
             <p>Time Remaining: <button type="button">0</button> </p>
@@ -38,7 +49,7 @@
             <h3>Roman Shield</h3>
             <img src="https://www.larpdistribution.com/wp-content/uploads/2020/05/MCI-3312.png">
             <p>Description Example: This shield is over 1000 years old. Can you believe it? </p>
-            <input type="tel" id="l-urbid2" name="urbid" placeholder="Enter a bid" pattern="[0-9]">
+            <input type="tel" id="l-urbid2" class="center" name="urbid" placeholder="Enter a bid" pattern="[0-9]">
             <button type="button">Place Bid</button>
             <button type="button">0</button>
             <p>Time Remaining: <button type="button">0</button> </p>
