--- a/Project-4/NewRome/templates/auctions_list.html
+++ b/Project-4/NewRome/templates/auctions_list.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Auctions List</title>
 </head>
+
+<div class="gallery" id="gallery_div_create" onload="welcome_auctions_list()">
+    
+</div>
 <body>
 
 </body>
