--- a/Project-4/NewRome/templates/base.html
+++ b/Project-4/NewRome/templates/base.html
@@ -10,19 +10,27 @@
 <body>
     <!--    NAV BAR     -->
     <div class="navbar">
-      <a href="#home">Home</a>
-      <a href="#news">News</a>
+      <a href="http://127.0.0.1:8080/">Home</a>
       <div class="dropdown">
         <button class="dropbtn">Auctions
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="#">Auctions Create</a>
-          <a href="#">Auctions Market</a>
-          <a href="#">Auctions Won</a>
+          <!--    UPDATE LINKS FOR DEPLOYMENT     -->
+          <a href="http://127.0.0.1:8080/auctions_create">Auctions Create</a>
+          <a href="http://127.0.0.1:8080/auctions_list">Auctions Market</a>
+          <a href="http://127.0.0.1:8080/auctions_won">Auctions Won</a>
         </div>
       </div>
-        <a href ="#home">Logged in as {{display_name}}</a>
+      <!--AUDIO-->
+      <audio controls autoplay loop>
+        <source src="/static/client_audio/journey.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+      </audio>
+      <div class="navbar-right">
+        <a href="http://127.0.0.1:8080/dark_web"></a>
+        <a href ="http://127.0.0.1:8080/account">Logged in as {{display_name}}</a>
+      </div>
     </div>
     <div class="content">
         {% block content %} {% endblock %}
