--- a/Project-4/NewRome/templates/index.html
+++ b/Project-4/NewRome/templates/index.html
@@ -1,36 +1,72 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login and Register</title>
+    <style>
+        body {
+            background-image: url("/static/client_images/welcome-column.png");
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+        }
+        h1 {
+            display: block;
+            font-size: 8em;
+            font-family: 'Times New Roman', Times, serif;
+            text-align: center;
+            color: #611B1B;
+            margin-top: 0.67em;
+            margin-bottom: 0.67em;
+            margin-left: 0;
+            margin-right: 0;
+            font-weight: bold;
+        }
 
-{% block content %}
-    <!--    Below is the actual content for the page. Every below the navBar    -->
-    <div class="div_Login">
-            Register:
-            <form action="/register" method="post" enctype="application/x-www-form-urlencoded">
-                <label>Username:
-                    <input id="reg_username" type="text" name="username_reg"/>
-                </label>
-                <br/>
-                <label>Password:&nbsp;
-                    <input id="reg_pass" type="password" name="password_reg">
-                </label>
-                <input type="submit" value="Post">
-            </form>
-        </div>
-        <!--    Below is the actual content for the page. Every below the navBar    -->
-        <div class="div_Register">
-            Login:
-            <form action="/login" method="post" enctype="application/x-www-form-urlencoded">
-                <label>Username:
-                    <input id="login_username" type="text" name="username_login"/>
-                </label>
-                <br/>
-                <label>Password:&nbsp;
-                    <input id="login_pass" type="password" name="password_login">
-                </label>
-                <input type="submit" value="Post">
-            </form>
-        </div>
-        <!--        GMAIL API STUFF GOES HERE-->
-        <div class="div_Gmail">
-            Insert any of the GMAIL API buttons of whatever below here. Inside this div.
-        </div>
-{% endblock %}
+    </style>
+</head>
+<body>
+    <h1 style="text-align:center">Welcome to the </h1>
+    <h1 style="text-align:center">Roman Empire</h1>
+
+
+<!-- Directly link to the login page -->
+<a href="/<!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Enter the Roman Empire</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                text-align: center;
+                margin: 50px;
+            }
+    
+            .btn {
+                padding: 10px 20px;
+                margin: 5px;
+                cursor: pointer;
+            }
+    
+            .enter-btn {
+                background-color: #4caf50;
+                color: #fff;
+                border: none;
+                text-decoration: none;
+            }
+    
+        </style>
+    </head>
+    <body>
+    
+    <!-- Directly link to the create auctions page -->
+    <a href="/auctions_create" class="btn enter-btn">Enter the Empire</a>
+    
+    </body>
+</html>
