--- a/Project-4/NewRome/templates/auctions_won.html
+++ b/Project-4/NewRome/templates/auctions_won.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Auctions Won</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+    <style>
+    body {
+          background-image: url('static/style_images/currency.jpg');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
+        }
+    </style>
+
+    <script type="text/javascript">setInterval(function (){socketio.emit("retrieve_won_listings");}, 1000)</script>
+    <div class="gallery" id="gallery_div_won">
+    </div>
+{% endblock %}
