--- a/Project-4/NewRome/templates/index.html
+++ b/Project-4/NewRome/templates/index.html
@@ -66,7 +66,7 @@
     <body>
     
     <!-- Directly link to the create auctions page -->
-    <a href="/auctions_create" class="btn enter-btn">Enter the Empire</a>
+    <a href="{{ url_for("render_account_info") }}" class="btn enter-btn">Enter the Empire</a>
     
     </body>
 </html>
