--- a/Project-4/NewRome/templates/base.html
+++ b/Project-4/NewRome/templates/base.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>NewRome</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
-    <script src="{{url_for('static', file='client/functions.js')}}"></script>
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', file='style/style.css')}}"/>
+    <script src="{{url_for('static', filename='client/functions.js')}}"></script>
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style/style.css')}}"/>
 </head>
 <body>
     <!--    NAV BAR     -->
