--- a/Project-4/NewRome/templates/dark_web.html
+++ b/Project-4/NewRome/templates/dark_web.html
@@ -28,13 +28,13 @@
     <h1>WELCOME TO THE DARK WEB</h1>
     <div class="gallery" id="gallery_div_create" onload="welcome_auctions_create()">
         <div class="listing">
-            <form action="/listing-img" id="image-form" method="post" enctype="multipart/form-data">
+            <div>
                 <label for="form-file-btn">Select Image: </label>
                 <input id="form-file-btn" class="center" type="file" name="file" accept="image*/">
                 <input id="submit-img" class="center" type="submit" value="Upload Image">
-            </form>
+            </div>
             <!--            Bid info form           -->
-            <form action="listing-create">
+            <div>
                 <input type="tel" id="l-title" class="center" name="title" placeholder="Enter a title">
                 <img id='img_src' src="{{ url_for('static', filename=filename) }}">
                 <textarea id="l-desc" name="description" rows="4" cols="40" placeholder="Enter description"></textarea>
@@ -42,28 +42,28 @@
                 <input type="tel" id="l-time" class="center" name="time" placeholder="Enter start time in seconds" pattern="[0-9]">
                 created by <span>MeMario</span>
                 </br>
-                <button type="button" id="create-listing-btn" onclick="create_listing()"> Create Listing</button>
-            </form>
+                <button type="button" id="create-listing-btn" onclick="alert('Ayo! Arrest him!')"> Create Listing</button>
+            </div>
         </div>
         <div class="listing" id="listing_####">
-            <h3>Roman Shield</h3>
-            <img src="/static/client_images/dark-default.png">
-            <p>Description Example: This shield is over 1000 years old. Can you believe it? </p>
+            <h3>Roman Cross</h3>
+            <img src="https://images.squarespace-cdn.com/content/v1/5dc2d01ec85d300c468b6311/1617283434758-DQAJFFP40ZQH7VZ1MCMI/unsplash-image-7oJ3O6pk10s.jpg?format=1500w">
+            <p>A cross. Useful tool for wonderful display of nice things.</p>
             <input type="tel" id="l-urbid" class="center" name="urbid" placeholder="Enter a bid" pattern="[0-9]">
-            <button type="button">Place Bid</button>
+            <button type="button" onclick="alert('Only one man conquered it.')">Place Bid</button>
             <button type="button">0</button>
             <p>Time Remaining: <button type="button">0</button> </p>
-            <button type="button">Author: <span>MarcoInThisCase</span></button>
+            <button type="button">Author: <span>Roman Army</span></button>
         </div>
         <div class="listing" id="listing_###">
-            <h3>Roman Shield</h3>
-            <img src="https://www.larpdistribution.com/wp-content/uploads/2020/05/MCI-3312.png">
-            <p>Description Example: This shield is over 1000 years old. Can you believe it? </p>
-            <input type="tel" id="l-urbid2" class="center" name="urbid" placeholder="Enter a bid" pattern="[0-9]">
-            <button type="button">Place Bid</button>
+            <h3>Servant</h3>
+            <img src="https://hicoop.b-cdn.net/wp-content/uploads/2023/06/roman-slave.png">
+            <p>SERVANT. NOT A SLAVE. We do not support the use of slavery here.</p>
+            <input type="number" id="l-urbid2" class="center" name="urbid" placeholder="Enter a bid" pattern="[0-9]">
+            <button type="button" onclick="alert('We do not support the purchase of slavery')">Place Bid</button>
             <button type="button">0</button>
             <p>Time Remaining: <button type="button">0</button> </p>
-            Author: <span>MarcoInThisCase</span>
+            Author: <span>Unknown</span>
         </div>
     </div>
 </body>
