--- a/Project-4/NewRome/templates/index.html
+++ b/Project-4/NewRome/templates/index.html
@@ -55,7 +55,7 @@
             }
     
             .enter-btn {
-                background-color: #4caf50;
+                background-color: #611B1B;
                 color: #fff;
                 border: none;
                 text-decoration: none;
