--- a/Project-4/NewRome/templates/base.html
+++ b/Project-4/NewRome/templates/base.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>NewRome</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
-    <script src="{{url_for('static_files', file='static/client/functions.js')}}"></script>
-{#    <script src="{{url_for('static_files', file='static/client/create.js')}}"></script>#}
-    <link rel="stylesheet" type="text/css" href="{{url_for('static_files', file='static/style/style.css')}}"/>
+    <script src="{{url_for('static', filename='client/functions.js')}}"></script>
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style/style.css')}}"/>
 </head>
 <body>
     <!--    NAV BAR     -->
@@ -33,6 +32,11 @@
         <a href ="{{ url_for('render_account_info') }}">Logged in as {{ session["username"] }}</a>
       </div>
     </div>
+    <script type="text/javascript">
+        socketio.on("display_error", function (e_msg){
+            alert(e_msg)
+        });
+    </script>
     <div class="content">
         {% block content %} {% endblock %}
     </div>
